--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -10,9 +10,26 @@
 
     <h2>Technology</h2>
     <p>Opis wykorzystanych technologii</p>
+    <ol>
+        <li>django</li>
+        <li>django-mptt</li>
+        <li>pandas</li>
+        <li>plotly</li>
+        <li>numpy</li>
+        <li>python</li>
+    </ol>
 
     ________
     <p>Panel użytkownika do appki.</p>
+    <ol>
+        <li>Opcja logowania/wylogowania/rejestracji.</li>
+        <li>Categorie widoczne tylko dla zalogowanego użytkownika.</li>
+        <li>Brak możliwośći widoczności i edyctji categorii, aktywności i logów innych użytkowników.</li>
+        <li>Przykładowa strona z bazą danych widoczna dla każdego (mogą być dane admina albo użytkownik testowy)</li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 
     <h3>Your categories</h3>
     {% if categories %}
