--- a/app_tracker/templates/app_tracker/activity_edit.html
+++ b/app_tracker/templates/app_tracker/activity_edit.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <label for="name">Name</label><input name="name" id="name" type="text" value="{{ activity.name }}"><br>
     <label for="color">Color</label>
-    <select name="color" id="color">
+    <select name="color" id="color" value='{{ activity.color }}'>
         <option value="gray">gray</option>
         <option value="yellow">yellow</option>
         <option value="purple">purple</option>
