Created data-frame using pandas on category page. Multiple-lines chart of category and avtivities. Color of activity lines depends on choosen colot.

--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -44,6 +44,9 @@
                             <option value="yellow">yellow</option>
                             <option value="purple">purple</option>
                             <option value="orange">orange</option>
+                            <option value="blue">blue</option>
+                            <option value="green">green</option>
+                            <option value="blue">pink</option>
                         </select>
                     </td>
                     <td colspan="2"><input type="submit" value="Create new activity"></td>            
