--- a/app_tracker/templates/app_tracker/activity_edit.html
+++ b/app_tracker/templates/app_tracker/activity_edit.html
@@ -11,6 +11,9 @@
         <option value="yellow">yellow</option>
         <option value="purple">purple</option>
         <option value="orange">orange</option>
+        <option value="blue">blue</option>
+        <option value="green">green</option>
+        <option value="blue">pink</option>
     </select>
     <br><br>
     <input type="submit" value="Save changes">
