--- a/app_tracker/templates/app_tracker/activity_edit.html
+++ b/app_tracker/templates/app_tracker/activity_edit.html
@@ -13,7 +13,7 @@
         <option value="orange">orange</option>
         <option value="blue">blue</option>
         <option value="green">green</option>
-        <option value="blue">pink</option>
+        <option value="black">black</option>
     </select>
     <br><br>
     <input type="submit" value="Save changes">
