--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -12,11 +12,11 @@
     <p>Opis wykorzystanych technologii</p>
     <ol>
         <li>django</li>
-        <li>django-mptt</li>
+        <li>python</li>
         <li>pandas</li>
         <li>plotly</li>
         <li>numpy</li>
-        <li>python</li>
+        <li>bootstrap</li>
     </ol>
 
     ________
@@ -24,11 +24,8 @@
     <ol>
         <li>Opcja logowania/wylogowania/rejestracji.</li>
         <li>Categorie widoczne tylko dla zalogowanego użytkownika.</li>
-        <li>Brak możliwośći widoczności i edyctji categorii, aktywności i logów innych użytkowników.</li>
+        <li>Brak możliwośći widoczności i edycji kategorii, aktywności i logów innych użytkowników.</li>
         <li>Przykładowa strona z bazą danych widoczna dla każdego (mogą być dane admina albo użytkownik testowy)</li>
-        <li></li>
-        <li></li>
-        <li></li>
     </ol>
 
     <h3>Your categories</h3>
