--- a/app_tracker/templates/app_tracker/tracker_home.html
+++ b/app_tracker/templates/app_tracker/tracker_home.html
@@ -22,6 +22,7 @@
     ________
     <p>Panel użytkownika do appki.</p>
     <ol>
+        <li>Utworzenie nowej kategorii</li>
         <li>Opcja logowania/wylogowania/rejestracji.</li>
         <li>Categorie widoczne tylko dla zalogowanego użytkownika.</li>
         <li>Brak możliwośći widoczności i edycji kategorii, aktywności i logów innych użytkowników.</li>
