--- a/app_tracker/templates/app_tracker/activity.html
+++ b/app_tracker/templates/app_tracker/activity.html
@@ -11,7 +11,7 @@
     <h2>Details</h2>
     <ol>
         <li>Ustawić wyświetlanie wartości domyślnych przedzialu czasowego (lub nie wyswietalnie jezeli nie podano).</li>
-        <li>Strona nie działa jeżeli nie ma zadeklarowanych żadnych godzin.</li>
+        <li><strike>Strona nie działa jeżeli nie ma zadeklarowanych żadnych godzin.</strike></li>
         <li>Dodać przycisk resetu przedziału czasowego.</li>
         <li>Dostosować wielkość wykresu</li>
         <li><strike>Uzależnić kolor wykresu od wybranego koloru aktywności.</strike></li>
@@ -23,7 +23,7 @@
     <p><b>Category:</b> {{activity.category}}</p>
     <p><b>Time summary:</b> {{activity.total_time}}</p>
     <p><b>Logs:</b></p>
-    <form method="POST" action="">
+    <form method="POST">
         {% csrf_token %}
         <label for="date">Date</label><input name="date" id="date" type="date"> |
         <label for="start_time">Start</label><input name="start_time" id="start_time" type="time"> |
