--- a/app_tracker/templates/app_tracker/category.html
+++ b/app_tracker/templates/app_tracker/category.html
@@ -86,10 +86,7 @@
         <li><strike>Data ostatniego loga na dana aktywnosc.</strike></li>
         <li><strike>Link do podgladu poszczegolnej aktywnosci</strike></li>
         <li>Wiersz w tabeli oraz wykres uwglednia kolor wybranej aktywnosci podczas jej tworzenia</li>
-        <li>Usuniecie aktywnosci >>> link do strony pozwalajacej na wybor usuniecia
-            <ol>
-                <li>aktywnosc i logi</li>
-                <li>aktywnosc bez logow (logi przypisywane do null)</li>
+        <li><strike>Usuniecie aktywnosci >>> link do strony pozwalajacej na wybor usuniecia.</strike></li>
             </ol>
         </li>
     </ol>
