--- a/app_tracker/templates/app_tracker/category_edit.html
+++ b/app_tracker/templates/app_tracker/category_edit.html
@@ -8,10 +8,11 @@
     <label for="description">Description</label><input name="description" id="description" type="text" value="{{ category.description }}"><br>
     <br><br>
     <input type="submit" value="Save changes">
+    <a href="{% url 'app_tracker:category' category.id %}">Cancel</a>
 </form>
 
 <ol>
-    <li>Wywala strone przy nie uzupelnieniu calego formularza podczas edycji.</li>
+    <li><strike>Wywala strone przy nie uzupelnieniu calego formularza podczas edycji.</strike></li>
     <li>Zamiast osobnej strony mogloby sie pojawiac okienko edycji na stronie aktywności.</li>
 </ol>
 {% endblock content %}
