--- a/app_tracker/templates/app_tracker/category_confirm_delete.html
+++ b/app_tracker/templates/app_tracker/category_confirm_delete.html
@@ -1,11 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<p>Are you sure you want delete <b>{{category.name}}</b> category?</p>
+<p>Are you sure you want delete <b>{{category.name}}</b> category with all connected activities ({{all_related_activities.count}})?</p>
+
+{% if all_related_activities %}
+    <ol>
+    {% for activity in all_related_activities %}
+        <li>{{activity}}</li>
+    {% endfor %}
+    </ol>
+{% endif %}
 
 <form method="POST">
     {% csrf_token %}
     <input type="submit" value="Delete category">
+    <a href="{% url 'app_tracker:category' category.id %}">Cancel</a>
 </form>
 
 {% endblock content %}
