--- a/templates/project_home.html
+++ b/templates/project_home.html
@@ -1,14 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content%}
-<h1>This is the Handy project.</h1>
-
-<h2>Getting closer</h2>
-<a href="{% url 'about_me' %}">About me</a><br>
-<a href="{% url 'resume' %}">Resume</a><br>
-
-<h2>Project handy</h2>
-<a href="{% url 'app_tracker:tracker_home' %}">Goal Tracker</a><br>
-Weather app<br>
-To-do list<br>
+<h1>the Handy project</h1>
+<p class="lead">Every handy app you might need.</p>
+<p class="lead">
+  <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+</p>
 {% endblock content %}
